# FlaskERPProject

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  entrypoint-celery.sh  entrypoint.sh  pyproject.toml
app/: main.py
app/api/views/: goods.py
app/command/: load_fixtures.py
app/config/fixtures/: fixtures_v1.yaml
app/core/: constants.py  extensions.py  settings.py
app/exceptions/: handlers.py
app/fixtures/: abstract_fixture_loader.py
app/fixtures/v1/: load_category.py  load_goods.py  load_unit.py
app/orm/caching/: caching_query.py  environment.py
app/orm/models/: __init__.py  base.py
app/orm/models/erp/employees/: __init__.py  recipient.py  supplier.py  worker.py
app/orm/models/erp/goods/: __init__.py  category.py  product.py  unit.py
app/orm/models/erp/management/: __init__.py  arrival.py  consumption.py  goods_arrival.py  goods_consumption.py  money.py
app/orm/repository/: __init__.py  base.py
app/orm/repository/goods/: category.py  product.py  unit.py
app/orm/schemas/: base.py  goods.py  logging.py
app/services/logging/: formatter.py  logging_middleware.py  query_profiler.py
app/worker/: main.py
